--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ jupyterlab_widgets==3.0.13
 keras==3.6.0
 kiwisolver==1.4.7
 libclang==18.1.1
-log-distance-measures==2.0.0
+log-distance-measures==2.1.0
 lxml==5.3.0
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -118,7 +118,7 @@ starlette==0.38.4
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
+#tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
